# game_framework

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
Editor/: CMakeLists.txt
Engine/: .gitignore  CMakeLists.txt  EngineConfig.h.in
Engine/Sources/: Engine.h  main.cpp
